--- a/admin/index.html
+++ b/admin/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Content Manager</title>
+  <title>Nisse Manager</title>
+  <link rel="shortcut icon" href="/images/favicon.png" type="image/png" />
   <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
